# TwentyOne

./: README.md  pyproject.toml
files/json_files/: card.json
files/python_lists/: phrases.py  rhyme.py
files/text_files/: rules.txt
src/: card.py  main.py  player.py  utils.py
tests/: test_card.py  test_player.py  test_utils.py
