[tool.poetry]
name = "twentyone"
version = "0.1.0"
description = "It's a card game, when you need to get 21 scores"
authors = ["Dmitry <dima.captan@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
